--- a/index.html
+++ b/index.html
@@ -197,18 +197,21 @@
                             <label for="nome" class="form-label">Nome Completo *</label>
                             <input type="text" id="nome" name="nome" class="form-input" required placeholder="Seu nome completo">
                             <span class="input-line"></span>
+                            <span class="input-duplicate-msg hidden" id="nome-duplicate"></span>
                         </div>
 
                         <div class="form-group">
                             <label for="email" class="form-label">E-mail *</label>
                             <input type="email" id="email" name="email" class="form-input" required placeholder="seu@email.com">
                             <span class="input-line"></span>
+                            <span class="input-duplicate-msg hidden" id="email-duplicate"></span>
                         </div>
 
                         <div class="form-group">
                             <label for="whatsapp" class="form-label">WhatsApp *</label>
                             <input type="tel" id="whatsapp" name="whatsapp" class="form-input" required placeholder="(31) 99999-9999">
                             <span class="input-line"></span>
+                            <span class="input-duplicate-msg hidden" id="whatsapp-duplicate"></span>
                         </div>
 
                         <div class="form-group">
