--- a/index.html
+++ b/index.html
@@ -58,7 +58,13 @@
                 <div class="welcome-text">
                     <div class="welcome-divider">
                         <span class="divider-line"></span>
-                        <span class="divider-star">✦</span>
+                        <div class="divider-icons">
+                            <span class="divider-icon">👗</span>
+                            <span class="divider-icon">✂️</span>
+                            <span class="divider-icon">🧵</span>
+                            <span class="divider-icon">🪡</span>
+                            <span class="divider-icon">👘</span>
+                        </div>
                         <span class="divider-line"></span>
                     </div>
                     
